# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "hotspring-forge"
version = "0.2.0"
edition = "2021"
description = "Hardware discovery and cross-substrate dispatch for hotSpring"
license = "AGPL-3.0-only"

[workspace]

[dependencies]
# Toadstool barracuda — the fungus. GPU device management, shader dispatch,
# buffer management. We lean on it, evolve locally, it absorbs.
barracuda = { path = "../../../phase1/toadstool/crates/barracuda" }

# GPU compute — must match barracuda's wgpu version (22)
wgpu = { version = "22", default-features = false, features = [
    "wgsl",
    "vulkan-portability",
] }

# Async runtime for GPU device creation
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
expect_used = "deny"
unwrap_used = "deny"

# Physics naming and doc notation (SHADER_F64, BrainChip, etc.).
doc_markdown = "allow"
module_name_repetitions = "allow"

# Ergonomic allows for probe/dispatch API style.
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
significant_drop_tightening = "allow"

# Physics formulas.
suboptimal_flops = "allow"
imprecise_flops = "allow"
